mi primera pagina Web

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h6>Titulo 6</h6>
   <!-- Parrafos -->
   <p>
-    Hola mi nombre es Linder, estoy construyendo mi pagian web
+    Hola mi nombre es Karina, estoy construyendo mi pagian web
   </p>
 
   <p>
@@ -105,11 +105,18 @@
 
 
   <audio controls autoplay muted>
-      <source src="./audios/audio.mp3" />
+    <source src="./audios/audio.mp3" />
   </audio>
 
-  <!--iframe --> 
-  <iframe src="./pdfs/git-cheat-sheet-education.pdf" width="200" height="800" ></iframe>
+  <!--iframe -->
+  
+  <iframe src="./pdfs/git-cheat-sheet-education.pdf" width="600" height="800"></iframe>
+
+  <!-- <iframe src="./videos/video.mp4" width="300" height="300" ></iframe> -->
+
+  <!-- <iframe src="./audios/audio.mp3"></iframe> -->
+
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/r6t0czGbuGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 
