--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
 <body>
   <!-- Las etiqueta de titulo h1 - h6 -->
+
+<h1>Inputs</h1>
+
+<a href="./semana1/inputs.html">Link para inputs</a>
+
   <h1>Titulo 1</h1>
   <h2>Titulo 2</h2>
   <h3>Titulo 3</h3>
@@ -109,14 +114,16 @@
   </audio>
 
   <!--iframe -->
-  
+
   <iframe src="./pdfs/git-cheat-sheet-education.pdf" width="600" height="800"></iframe>
 
   <!-- <iframe src="./videos/video.mp4" width="300" height="300" ></iframe> -->
 
   <!-- <iframe src="./audios/audio.mp3"></iframe> -->
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/r6t0czGbuGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/r6t0czGbuGI" title="YouTube video player"
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
 
 </body>
 
