--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!-- ESTRUCTURA DE HTML -->
-<html>
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
+  <!-- va a contener las etiquetas pero el SEO-->
+  <meta charset="utf-8" />
+  <meta
+    name="description"
+    content="Esta pagina es donde estoy aprendiendo HTML, CSS y JS"
+  />
+  <meta name="robots" content="" />
+  <meta name="googlebot" content="" />
+  <meta name="keywords" content="LINDER HASSINGER, HTML, CSS, JS, CODIGO" />
   <title>Codigo Front 13</title>
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@linder3hs" />
+  <meta name="twitter:title" content="Mi pagina web" />
+  <meta
+    name="twitter:description"
+    content="Esta pagina es donde estoy aprendiendo HTML, CSS y JS"
+  />
+  <meta
+    name="twitter:image"
+    content="https://media-exp1.licdn.com/dms/image/C4E1BAQEfNIXEf_JoKg/company-background_10000/0?e=2159024400&v=beta&t=PhtZQJ8QA5Wy2lQzlfJL166pSeK_i3q2qfkD-xOMCcc"
+  />
+
 </head>
 
 <body>
   <!-- Las etiqueta de titulo h1 - h6 -->
 
-<h1>Inputs</h1>
+  <h1>Inputs</h1>
 
-<a href="./semana1/inputs.html">Link para inputs</a>
+  <a href="./semana1/inputs.html">Link para inputs</a>
+
+  <h1>Formularios</h1>
+
+  <a href="./semana1/form.html">Link a formularios</a>
 
   <h1>Titulo 1</h1>
   <h2>Titulo 2</h2>
