--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
   <a href="./semana1/form.html">Link a formularios</a>
 
+  <h1>Tablas</h1>
+
+  <a href="./semana1/tablas.html">Link a Tablas</a>
+
   <h1>Titulo 1</h1>
   <h2>Titulo 2</h2>
   <h3>Titulo 3</h3>
