creacion de formulario de registro y creacion de tablero ajedrez

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
 
   <a href="./semana1/tablas.html">Link a Tablas</a>
 
+  <h1>Tablero de ajedrez</h1>
+
+  <a href="./tarea1/tableroajedrez.html">Link a tablero de ajedrez</a>
+
+  <h1>Formulario de registro</h1>
+
+  <a  href=!./tarea1/formulariopersonas.html>Link a formulario de registro  </a>
+  
+
   <h1>Titulo 1</h1>
   <h2>Titulo 2</h2>
   <h3>Titulo 3</h3>
