Correcion en link formulario registro de personas

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
   <h1>Formulario de registro</h1>
 
-  <a  href=!./tarea1/formulariopersonas.html>Link a formulario de registro  </a>
-  
+  <a  href="./tarea1/formulariopersonas.html">Link a formulario de registro  </a>
+
 
   <h1>Titulo 1</h1>
   <h2>Titulo 2</h2>
