Correcion vinculo imagen internet alt

--- a/tarea1/formulariopersonas.html
+++ b/tarea1/formulariopersonas.html
@@ -97,8 +97,12 @@
                 <i>¡Muchas gracias por participar! </i>
             </p>
 
-            <img src="https://t4.ftcdn.net/jpg/03/78/71/03/360_F_378710388_1p38l2jfzEMqQ2pJbxBCnfxwP94HYGfQ.jpg" 
-            width="200" height="150" />
+            <p>
+                <img src="https://t4.ftcdn.net/jpg/03/78/71/03/360_F_378710388_1p38l2jfzEMqQ2pJbxBCnfxwP94HYGfQ.jpg"
+                alt="Tu opinion importa" 
+                width="200" height="100" />
+            </p>
+            
         </h3>
         </form>
 </body>
