--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="contenedor-principal">
       <h1>Mi portafolio</h1>
       <p>
-        Hola mi nombre es Linder Hassinger, soy docente en CodiGo, estoy
+        Hola mi nombre es Karina Mendietta, soy estudiante en CodiGo, estoy
         aprendiendo a programar en HTML, CSS y JS.
       </p>
       <img
