--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="robots" content="" />
     <meta name="googlebot" content="" />
-    <meta name="keywords" content="LINDER HASSINGER, HTML, CSS, JS, CODIGO" />
+    <meta name="keywords" content="KARINA MENDIETTA, HTML, CSS, JS, CODIGO" />
     <title>Codigo Front 13</title>
 
     <meta name="twitter:card" content="summary" />
